--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=Hello
 spring.jpa.hibernate.ddl-auto=update
 
 # MySQL database connection settings
-
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate settings
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
