--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,9 @@ services:
       - "8081:8081"
     env_file:
       - data.env
+    environment:
+      - DB_URL=${DB_URL}
+      - DB_USERNAME=${DB_USER}
+      - DB_PASSWORD=${DB_PASS}
     restart: always
 
