--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - data.env
     environment:
       - DB_URL=${DB_URL}
-      - DB_USERNAME=${DB_USER}
-      - DB_PASSWORD=${DB_PASS}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
     restart: always
 
