--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,28 @@
-name: Deploy Backend with Docker and Render
+name: Deploy to Render
 
 on:
   push:
     branches:
-      - main  # Runs only when you push to the main branch
+      - main  # Change this if your default branch is different
 
 jobs:
-  build-and-push:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          
-      - name: Grant execute permission to Maven Wrapper
-        run: chmod +x mvnw  
-
-      - name: Build Spring Boot App
-        run: |
-          ./mvnw clean package  # Use for Maven
-          # gradle build  # Use this if using Gradle
-
-      - name: Login to Docker Hub
+      - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t your-dockerhub-username/thought:latest .
+        run: docker build -t dhruv1503/thought:latest .
 
-      - name: Push Docker Image
-        run: docker push your-dockerhub-username/thought:latest
+      - name: Push Docker Image to Docker Hub
+        run: docker push dhruv1503/thought:latest
 
       - name: Deploy to Render
-        run: curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK }}"
+        run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
+
 
