--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
         run: docker push dhruv1503/thought:latest
 
       - name: Deploy to Render
-        run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
+        run: |
+          curl -X POST -d '' ${{ secrets.RENDER_DEPLOY_HOOK }}
 
 
