--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=20000
 
 management.endpoints.web.exposure.include=*
-management.endpoint.prometheus.enabled=true
+management.endpoint.prometheus.access=unrestricted
 management.prometheus.metrics.export.enabled=true
 
 # Server settings
