--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,7 +2,8 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'thoughts-backend'
+  - job_name: 'thoughts-backend-render'
     metrics_path: '/actuator/prometheus'
+    scheme: https
     static_configs:
-      - targets: ['host.docker.internal:8081']
+      - targets: ['thought-0hcs.onrender.com']
