--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,13 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=20000
 
 management.endpoints.web.exposure.include=*
-management.endpoint.prometheus.access=unrestricted
+
+# Enable Prometheus-specific endpoint
+management.endpoint.prometheus.enabled=true
 management.prometheus.metrics.export.enabled=true
+
+# Optional: base path (usually default is /actuator)
+management.endpoints.web.base-path=/actuator
 
 # Server settings
 server.port=8081
