--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,13 @@ spring.datasource.hikari.connection-timeout=20000
 
 management.endpoints.web.exposure.include=*
 
+# Enable Prometheus-specific endpoint
+management.endpoint.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
 
+# Keep-alive service configuration
 keep-alive.url=${KEEP_ALIVE_URL:http://localhost}
+server.port=${PORT:8080}
 
 # Optimize startup time
 spring.jpa.defer-datasource-initialization=true
