--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,23 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
-			
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.13</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<repository>dhruv1503/thought</repository>
+					<tag>latest</tag>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
